--- a/src/partials/explore-chocolate.html
+++ b/src/partials/explore-chocolate.html
@@ -24,7 +24,11 @@
         />
       </label>
 
-      <button class="explore-modal-button modal-btn" type="submit">
+      <button
+        class="explore-modal-button modal-btn"
+        type="submit"
+        data-modal-close-explore
+      >
         <span class="explore-primary-span">Submit</span>
         <span class="explore-secondary-span">Subscribe</span>
       </button>
