--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,10 +12,10 @@
                 <a href="#footer-choc" class="link scroll-down-link">
                     <p class="scroll-down-text">scroll down</p>
                     <svg class="scroll-icon-small" width="5" height="9">
-                        <use href="../img/choco-icons.svg#icon-vector-small"></use>
+                        <use href="/img/choco-icons.svg#icon-vector-small"></use>
                     </svg>
                     <svg class="scroll-icon-large" width="7" height="13">
-                      <use href="../img/choco-icons.svg#icon-vector"></use>
+                      <use href="/img/choco-icons.svg#icon-vector"></use>
                     </svg>
 
                 </a>
