--- a/src/partials/leave-review.html
+++ b/src/partials/leave-review.html
@@ -2,7 +2,7 @@
     <div class="review-modal ">
         <button type="button" class="review-modal-close-btn" data-modal-close-review>
             <svg class="review-modal-close-icon" width="28" height="28">
-                <use href="../img/choco-icons.svg#icon-x-close-small"></use>
+                <use href="/img/choco-icons.svg#icon-x-close-small"></use>
             </svg>
         </button>
 
@@ -16,7 +16,7 @@
                 <input class="input-field phone-input" name="user_phone_number" type="number" placeholder="Phone number" required pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="9">
 
                 <div class="flag-img-part">
-                    <img class="flag-img" src="../img/ukraine.svg" alt="flag">
+                    <img class="flag-img" src="/img/ukraine.svg" alt="flag">
                     <span class="ukr-numb">+380</span>
                 </div>
             </div>
