--- a/src/css/made.css
+++ b/src/css/made.css
@@ -132,7 +132,6 @@
     width: 600px;
   }
 }
-
 @media only screen and (max-width: 1199px) {
   .plyr {
     margin-bottom: 20px;
@@ -143,7 +142,8 @@
   /*  Регулюємо розмір постера  */
   background-size: cover;
 }
-
+.plyr__control {
+}
 .plyr__control--overlaid {
   /*  Встановлюємо стилі для кнопки play  */
   --plyr-control-spacing: 5px;
@@ -158,4 +158,20 @@
 /* Приховуємо панель з елементами управління перед активацією програвання відео */
 .plyr--paused.plyr--stopped .plyr__controls {
   opacity: 0;
+}
+
+.made-flex {
+  position: relative;
+}
+.made-blok-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  /*  якщо z index залишити так тимчасово */
+}
+
+.made-img {
+  border-radius: 15px;
+  background-size: cover;
 }
