--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -21,7 +21,7 @@
               /img/unique_components/chocolate@1x.png               206w,
               /img/unique_components/chocolate@2x.png               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/chocolate-mobile-tablet@1x.png" alt="chocolate" />
+            src="/img/unique_components/chocolate-mobile-tablet@1x.png" alt="chocolate">
           <h3 class="components-subtitle">milk chocolate</h3>
           <!-- </div> -->
         </div>
@@ -55,7 +55,7 @@
               /img/unique_components/milk@1x.png               206w,
               /img/unique_components/milk@2x.png               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/milk-mobile-tablet@1x.png" alt="milk" />
+            src="/img/unique_components/milk-mobile-tablet@1x.png" alt="milk">
           <h3 class="components-subtitle">Milk</h3>
           <!-- </div> -->
         </div>
@@ -89,7 +89,7 @@
               /img/unique_components/nuts@1x.png               206w,
               /img/unique_components/nuts@2x.png               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/nuts-mobile-tablet@1x.png" alt="nuts" />
+            src="/img/unique_components/nuts-mobile-tablet@1x.png" alt="nuts">
 
           <h3 class="components-subtitle">nuts</h3>
           <!-- </div> -->
@@ -123,7 +123,7 @@
               /img/unique_components/coffee@1x.png               206w,
               /img/unique_components/coffee@2x.png               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/coffee-mobile-tablet@1x.png" alt="coffee" />
+            src="/img/unique_components/coffee-mobile-tablet@1x.png" alt="coffee">
           <h3 class="components-subtitle">SEMI - SWEET CHOCOLATE</h3>
           <!-- </div> -->
         </div>
