--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -13,7 +13,7 @@
         <div class="buy-now-thumb">
           <div class="buy-now-wrapper">
             <picture>
-              <img src="/img/buy_now/buy@1x.png" alt="pieces of chocolate" />
+              <img src="/img/buy_now/buy@1x.png" alt="pieces of chocolate">
             </picture>
           </div>
           <button class="button buy-now-btn" type="button">100 g</button>
@@ -23,10 +23,7 @@
         <div class="buy-now-thumb">
           <div class="buy-now-wrapper">
             <picture>
-              <img
-                src="/img/buy_now/buy_two@1x.png"
-                alt="pieces of chocolate"
-              />
+              <img src="/img/buy_now/buy_two@1x.png" alt="pieces of chocolate">
             </picture>
           </div>
           <button class="button buy-now-btn" type="button">200 g</button>
@@ -36,10 +33,7 @@
         <div class="buy-now-thumb">
           <div class="buy-now-wrapper">
             <picture>
-              <img
-                src="/img/buy_now/buy_three@1x.png"
-                alt="pieces of chocolate"
-              />
+              <img src="/img/buy_now/buy_three@1x.png" alt="pieces of chocolate">
             </picture>
           </div>
           <button class="button buy-now-btn" type="button">300 g</button>
@@ -48,60 +42,26 @@
     </ul>
     <form class="buy-now-modal-form">
       <label class="buy-now-label">
-        <span class="buy-now-label-title label-input-text"
-          >Personal information</span
-        >
+        <span class="buy-now-label-title label-input-text">Personal information</span>
         <div class="buy-now-input-wrapper">
-          <input
-            type="text"
-            name="username"
-            required
-            class="buy-now-label-input placeholder-text"
-            placeholder="Name"
-            pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$"
-            minlength="2"
-          />
-          <input
-            type="text"
-            name="user_surname"
-            required
-            class="buy-now-label-input placeholder-text"
-            placeholder="Surname"
-            pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$"
-            minlength="2"
-          />
+          <input type="text" name="username" required class="buy-now-label-input placeholder-text" placeholder="Name"
+            pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2" />
+          <input type="text" name="user_surname" required class="buy-now-label-input placeholder-text"
+            placeholder="Surname" pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2" />
         </div>
       </label>
       <label class="buy-now-label">
         <span class="buy-now-label-title label-input-text">Email</span>
-        <input
-          type="email"
-          name="user_email"
-          required
-          class="buy-now-label-input placeholder-text"
-          placeholder="Enter your email"
-          pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-          title="mail@mail.com"
-        />
+        <input type="email" name="user_email" required class="buy-now-label-input placeholder-text"
+          placeholder="Enter your email" pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" title="mail@mail.com" />
       </label>
       <label class="buy-now-label">
         <span class="buy-now-label-title label-input-text">Phone number</span>
         <div class="buy-now-phone-wrapper">
-          <input
-            type="tel"
-            name="user-phone"
-            required
-            pattern="^[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}$"
-            title="xx-xxx-xx-xx"
-            class="buy-now-label-input placeholder-text"
-            placeholder="Phone number"
-          />
+          <input type="tel" name="user-phone" required pattern="^[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}$"
+            title="xx-xxx-xx-xx" class="buy-now-label-input placeholder-text" placeholder="Phone number" />
           <div class="buy-now-icon-flag">
-            <img
-              class="buy-now-img-flag"
-              src="/img/ukraine.svg"
-              alt="ukraine"
-            />
+            <img class="buy-now-img-flag" src="/img/ukraine.svg" alt="ukraine" />
             <span class="buy-now-label-phone input-text">+380</span>
           </div>
         </div>
@@ -109,33 +69,16 @@
       <label class="buy-now-label">
         <span class="buy-now-label-title label-input-text">Card number</span>
         <div class="buy-now-card-wrapper">
-          <input
-            type="tel"
-            name="user-card"
-            pattern="^[0-9]{12}"
-            required
-            title="xxxx xxxx xxxx xxxx"
-            class="buy-now-label-input placeholder-text"
-            placeholder="Enter card"
-          />
+          <input type="tel" name="user-card" pattern="^[0-9]{12}" required title="xxxx xxxx xxxx xxxx"
+            class="buy-now-label-input placeholder-text" placeholder="Enter card" />
           <div>
-            <img
-              class="buy-now-icon-card"
-              src="/img/mastercard.svg"
-              alt="mastercard"
-              width="44"
-              height="30"
-            />
+            <img class="buy-now-icon-card" src="/img/mastercard.svg" alt="mastercard" width="44" height="30" />
           </div>
         </div>
       </label>
       <label class="buy-now-label">
         <span class="buy-now-label-title label-input-text">Comment</span>
-        <textarea
-          name="user_message"
-          placeholder="Enter text"
-          class="buy-now-message input-text"
-        ></textarea>
+        <textarea name="user_message" placeholder="Enter text" class="buy-now-message input-text"></textarea>
       </label>
       <button class="button buy-now-btn-submit modal-btn js-modal-close" type="submit">
         Submit
