--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -7,7 +7,7 @@
           <img class="products-img" srcset="
               /img/our_products/orange@1x.png 1x,
               /img/our_products/orange@2x.png 2x
-            " src="/img/our_products/orange@1x.png" alt="orange chocolate image" width="230" height="201" />
+            " src="/img/our_products/orange@1x.png" alt="orange chocolate image" width="230" height="201">
           <h2 class="products-subtitle section-subtitle">orange</h2>
           <p class="products-text">Dark chocolate</p>
           <button class="products-btn section-btn" type="button">45 UAH</button>
@@ -18,7 +18,7 @@
               /img/our_products/applecranberry@1x.png 1x,
               /img/our_products/applecranberry@2x.png 2x
             " src="/img/our_products/applecranberry@1x.png" alt="applecranberry chocolate image" width="230"
-            height="201" />
+            height="201">
           <h2 class="products-subtitle section-subtitle">APPLE&CRANBERRY</h2>
           <p class="products-text">Milk chocolate</p>
           <button class="products-btn section-btn" type="button">50 UAH</button>
@@ -28,7 +28,7 @@
           <img class="products-img" srcset="
               /img/our_products/sea_salt@1x.png 1x,
               /img/our_products/sea_salt@2x.png 2x
-            " src="/img/our_products/sea_salt@1x.png" alt="seasalt chocolate image" width="230" height="201" />
+            " src="/img/our_products/sea_salt@1x.png" alt="seasalt chocolate image" width="230" height="201">
           <h2 class="products-subtitle section-subtitle">lime&sea salt</h2>
           <p class="products-text">Dark chocolate</p>
           <button class="products-btn section-btn" type="button">66 UAH</button>
@@ -38,7 +38,7 @@
           <img class="products-img" srcset="
               /img/our_products/pineapple@1x.png 1x,
               /img/our_products/pineapple@2x.png 2x
-            " src="/img/our_products/pineapple@1x.png" alt="pineapple chocolate image" width="230" height="201" />
+            " src="/img/our_products/pineapple@1x.png" alt="pineapple chocolate image" width="230" height="201">
           <h2 class="products-subtitle section-subtitle">pineapple</h2>
           <p class="products-text">Dark chocolate</p>
           <button class="products-btn section-btn" type="button">54 UAH</button>
@@ -48,7 +48,7 @@
           <img class="products-img" srcset="
               /img/our_products/classic@1x.png 1x,
               /img/our_products/classic@2x.png 2x
-            " src="/img/our_products/classic@1x.png" alt="classic chocolate image" width="230" height="201" />
+            " src="/img/our_products/classic@1x.png" alt="classic chocolate image" width="230" height="201">
           <h2 class="products-subtitle section-subtitle">Classic</h2>
           <p class="products-text">Milk chocolate</p>
           <button class="products-btn section-btn" type="button">45 UAH</button>
@@ -58,7 +58,7 @@
           <img class="products-img" srcset="
               /img/our_products/honey@1x.png 1x,
               /img/our_products/honey@2x.png 2x
-            " src="/img/our_products/honey@1x.png" alt="honey chocolate image" width="230" height="201" />
+            " src="/img/our_products/honey@1x.png" alt="honey chocolate image" width="230" height="201">
           <h2 class="products-subtitle section-subtitle">honey</h2>
           <p class="products-text">Milk chocolate</p>
           <button class="products-btn section-btn" type="button">50 UAH</button>
@@ -69,7 +69,7 @@
               /img/our_products/roasted_fruits@1x.png 1x,
               /img/our_products/roasted_fruits@2x.png 2x
             " src="/img/our_products/roasted_fruits@1x.png" alt="roastedfruit chocolate image" width="230"
-            height="201" />
+            height="201">
           <h2 class="products-subtitle section-subtitle">Roasted fruits</h2>
           <p class="products-text">Dark chocolate</p>
           <button class="products-btn section-btn" type="button">66 UAH</button>
@@ -79,7 +79,7 @@
           <img class="products-img" srcset="
               /img/our_products/classic_w@1x.png 1x,
               /img/our_products/classic_w@2x.png 2x
-            " src="/img/our_products/classic_w@1x.png" alt="white chocolate image" width="230" height="201" />
+            " src="/img/our_products/classic_w@1x.png" alt="white chocolate image" width="230" height="201">
           <h2 class="products-subtitle section-subtitle">Classic</h2>
           <p class="products-text">White chocolate</p>
           <button class="products-btn section-btn" type="button">54 UAH</button>
