--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -45,9 +45,9 @@
         <span class="buy-now-label-title label-input-text">Personal information</span>
         <div class="buy-now-input-wrapper">
           <input type="text" name="username" required class="buy-now-label-input placeholder-text" placeholder="Name"
-            pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2">
+            pattern="^[a-zA-Za-яА-Яі-Ії-Ї]+$" minlength="2">
           <input type="text" name="user_surname" required class="buy-now-label-input placeholder-text"
-            placeholder="Surname" pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2">
+            placeholder="Surname" pattern="^[a-zA-Za-яА-Яі-Ії-Ї]+$" minlength="2">
         </div>
       </label>
       <label class="buy-now-label">
