--- a/src/partials/explore-chocolate.html
+++ b/src/partials/explore-chocolate.html
@@ -7,28 +7,16 @@
     </button>
 
     <h2 class="explore-modal-title section-title">
-      Explore our<br />
+      Explore our<br>
       <span class="title-accent">new chocolate</span> first!
     </h2>
     <form class="explore-modal-form" name="explore-modal-form">
       <label class="explore-label">
-        <input
-          class="explore-input"
-          name="user_email"
-          type="email"
-          placeholder="Enter your email"
-          required=""
-          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-          minlength="2"
-          title="mail@mail.com"
-        />
+        <input class="explore-input" name="user_email" type="email" placeholder="Enter your email" required=""
+          pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" minlength="2" title="mail@mail.com">
       </label>
 
-      <button
-        class="explore-modal-button modal-btn"
-        type="submit"
-        data-modal-close-explore
-      >
+      <button class="explore-modal-button modal-btn" type="submit" data-modal-close-explore>
         <span class="explore-primary-span">Submit</span>
         <span class="explore-secondary-span">Subscribe</span>
       </button>
