--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-section" id="footer-choc">
+<div class="footer-section" id="footer-choc">
     <div class="footer-con container">
         <div class="footer-up-part">
             <div class="footer-call">Chocolate <span class="footer-call-rest">a delicious cure for a bad day</span>
@@ -8,15 +8,20 @@
                     <div class="footer-contact-text">Contact us</div>
                     <div class="footer-contact-menu">
                         <ul class="footer-contact-list">
-                            <li class="list link"><a href="tel:+380684439426" class="list link footer-contact-item">+380 (68) 443-94-26</a></li>
-                            <li class="list link"><a href="mailto:simplychoc@gmail.com" class="list link footer-contact-item">simplychoc@gmail.com</a></li></ul>
+                            <li class="list link"><a href="tel:+380684439426" class="list link footer-contact-item">+380
+                                    (68) 443-94-26</a></li>
+                            <li class="list link"><a href="mailto:simplychoc@gmail.com"
+                                    class="list link footer-contact-item">simplychoc@gmail.com</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="footer-soc">
-                    <a class="footer-soc-icon link" target="_blank" href="https://www.instagram.com/" rel="noopener noreferrer"><svg class="soc-icon">
+                    <a class="footer-soc-icon link" target="_blank" href="https://www.instagram.com/"
+                        rel="noopener noreferrer"><svg class="soc-icon">
                             <use href="/img/choco-icons.svg#icon-instagram"></use>
                         </svg></a>
-                    <a class="footer-soc-icon link" target="_blank" href="https://twitter.com/" rel="noopener noreferrer"><svg class="soc-icon">
+                    <a class="footer-soc-icon link" target="_blank" href="https://twitter.com/"
+                        rel="noopener noreferrer"><svg class="soc-icon">
                             <use href="/img/choco-icons.svg#icon-twitter"></use>
                         </svg></a>
                 </div>
@@ -32,6 +37,5 @@
             </ul>
         </div>
     </div>
-    <!-- </div> -->
-</footer>
+</div>
 <!-- <script type="module" src="../js/gotop.js"></script> -->
