--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header-section">
+<div class="header-section">
   <div class="header-div container">
     <nav class="header-nav">
       <a class="logo header-link link" href="./index.html"><span class="span-simply">SIMPLY</span> CHOCOLATE
@@ -51,4 +51,4 @@
       </svg>
     </button>
   </div>
-</header>
+</div>
