--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -3,7 +3,7 @@
     <h2 class="section-title made-title">
       How it’s <span class="title-accent">made?</span>
     </h2>
-
+<div class="made-flex">
       <div
         class="features-video plyr__video-embed made-blok-video"
         id="features-player"
@@ -74,6 +74,6 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div></div>
   </div>
 </section>
