--- a/src/partials/leave-review.html
+++ b/src/partials/leave-review.html
@@ -11,10 +11,10 @@
         </h2>
         <form>
             <div class="leave-review-form">
-                <input class="input-field" name="user_name" type="text" placeholder="Name" required pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2">
-                <input class="input-field" name="user_e-mail" type="email" placeholder="Email" required pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="2">
+                <input class="input-field" name="user_name" type="text" placeholder="Name" required pattern="^[a-zA-Za-яА-Яі-Ії-Ї]+$" minlength="2">
+                <input class="input-field" name="user_e-mail" type="email" placeholder="Email" required pattern="^[a-zA-Za-яА-Яі-Ії-Ї]+$" minlength="2">
                 <div class="phone-part">
-                    <input class="input-field phone-input" name="user_phone_number" type="number" placeholder="Phone number" required pattern="^[a-zA-Zа-яА-Яі-Ії-Ї]+$" minlength="9">
+                    <input class="input-field phone-input" name="user_phone_number" type="number" placeholder="Phone number" required pattern="^[a-zA-Za-яА-Яі-Ії-Ї]+$" minlength="9">
                     <div class="flag-img-part">
                         <img class="flag-img" src="/img/ukraine.svg" alt="flag">
                         <span class="ukr-numb">+380</span>
