added webp components

--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -16,12 +16,12 @@
         <div class="overlay-front">
           <!-- <div class="overlay-content"> -->
           <img class="components-img" srcset="
-              /img/unique_components/chocolate-mobile-tablet@1x.png 224w,
-              /img/unique_components/chocolate-mobile-tablet@2x.png 448w,
-              /img/unique_components/chocolate@1x.png               206w,
-              /img/unique_components/chocolate@2x.png               412w
+              /img/unique_components/chocolate-mobile-tablet@1x.webp 224w,
+              /img/unique_components/chocolate-mobile-tablet@2x.webp 448w,
+              /img/unique_components/chocolate@1x.webp               206w,
+              /img/unique_components/chocolate@2x.webp               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/chocolate-mobile-tablet@1x.png" alt="chocolate">
+            src="/img/unique_components/chocolate-mobile-tablet@1x.webp" alt="chocolate">
           <h3 class="components-subtitle">milk chocolate</h3>
           <!-- </div> -->
         </div>
@@ -50,12 +50,12 @@
         <div class="overlay-front">
           <!-- <div class="overlay-content"> -->
           <img class="components-img" srcset="
-              /img/unique_components/milk-mobile-tablet@1x.png 224w,
-              /img/unique_components/milk-mobile-tablet@2x.png 448w,
-              /img/unique_components/milk@1x.png               206w,
-              /img/unique_components/milk@2x.png               412w
+              /img/unique_components/milk-mobile-tablet@1x.webp 224w,
+              /img/unique_components/milk-mobile-tablet@2x.webp 448w,
+              /img/unique_components/milk@1x.webp               206w,
+              /img/unique_components/milk@2x.webp               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/milk-mobile-tablet@1x.png" alt="milk">
+            src="/img/unique_components/milk-mobile-tablet@1x.webp" alt="milk">
           <h3 class="components-subtitle">Milk</h3>
           <!-- </div> -->
         </div>
@@ -84,12 +84,12 @@
         <div class="overlay-front">
           <!-- <div class="overlay-content"> -->
           <img class="components-img" srcset="
-              /img/unique_components/nuts-mobile-tablet@1x.png 224w,
-              /img/unique_components/nuts-mobile-tablet@2x.png 448w,
-              /img/unique_components/nuts@1x.png               206w,
-              /img/unique_components/nuts@2x.png               412w
+              /img/unique_components/nuts-mobile-tablet@1x.webp 224w,
+              /img/unique_components/nuts-mobile-tablet@2x.webp 448w,
+              /img/unique_components/nuts@1x.webp               206w,
+              /img/unique_components/nuts@2x.webp               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/nuts-mobile-tablet@1x.png" alt="nuts">
+            src="/img/unique_components/nuts-mobile-tablet@1x.webp" alt="nuts">
 
           <h3 class="components-subtitle">nuts</h3>
           <!-- </div> -->
@@ -118,12 +118,12 @@
         <div class="overlay-front">
           <!-- <div class="overlay-content"> -->
           <img class="components-img" srcset="
-              /img/unique_components/coffee-mobile-tablet@1x.png 224w,
-              /img/unique_components/coffee-mobile-tablet@2x.png 448w,
-              /img/unique_components/coffee@1x.png               206w,
-              /img/unique_components/coffee@2x.png               412w
+              /img/unique_components/coffee-mobile-tablet@1x.webp 224w,
+              /img/unique_components/coffee-mobile-tablet@2x.webp 448w,
+              /img/unique_components/coffee@1x.webp               206w,
+              /img/unique_components/coffee@2x.webp               412w
             " sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-            src="/img/unique_components/coffee-mobile-tablet@1x.png" alt="coffee">
+            src="/img/unique_components/coffee-mobile-tablet@1x.webp" alt="coffee">
           <h3 class="components-subtitle">SEMI - SWEET CHOCOLATE</h3>
           <!-- </div> -->
         </div>
