--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -5,7 +5,7 @@
     </h2>
     <div class="made-flex">
       <div class="features-video plyr__video-embed made-blok-video" id="features-player"
-        data-poster="/img/how_its_made/cover-mobile@1x.jpg">
+        data-poster="/img/how_its_made/cover-mobile@1x.webp">
         <iframe
           src="https://www.youtube.com/embed/2H0tglcIKsM?autoplay=0&modestbranding=1&controls=0&disablekb=1&playsinline=1&cc_load_policy=1&cc_lang_pref=auto&widget_referrer=https%3A%2F%2Fplyr.io%2F%23youtube&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fplyr.io&widgetid=1"
           allowfullscreen allow="autoplay"></iframe>
@@ -14,20 +14,20 @@
       <div class="made-blok-img">
         <picture>
           <source media="(min-width: 1200px)" srcset="
-              /img/how_its_made/cover@1x.jpg 1x,
-              /img/how_its_made/cover@2x.jpg 2x
+              /img/how_its_made/cover@1x.webp 1x,
+              /img/how_its_made/cover@2x.webp 2x
             ">
 
           <source media="(min-width: 768px)" srcset="
-              /img/how_its_made/cover-tablet@1x.jpg 1x,
-              /img/how_its_made/cover-tablet@2x.jpg 2x
+              /img/how_its_made/cover-tablet@1x.webp 1x,
+              /img/how_its_made/cover-tablet@2x.webp 2x
             ">
 
           <source media="(max-width: 767px)" srcset="
-              /img/how_its_made/cover-mobile@1x.jpg 1x,
-              /img/how_its_made/cover-mobile@2x.jpg 2x
+              /img/how_its_made/cover-mobile@1x.webp 1x,
+              /img/how_its_made/cover-mobile@2x.webp 2x
             ">
-          <img class="made-img" src="/img/how_its_made/cover-mobile@1x.jpg" alt="melted chocolate in a bowl">
+          <img class="made-img" src="/img/how_its_made/cover-mobile@1x.webp" alt="melted chocolate in a bowl">
         </picture>
       </div>
 
