--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -6,14 +6,14 @@
                 <picture>
                     <!-- Desktop -->
                     <source media="(min-width: 1200px)"
-                        srcset="/img/top_sellers/choco_one@1x.jpg 1x, /img/top_sellers/choco_one@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco_one@1x.webp 1x, /img/top_sellers/choco_one@2x.webp 2x">
                     <!-- Tablet -->
                     <source media="(min-width: 768px)"
-                        srcset="/img/top_sellers/choco-one-tablet@1x.jpg 1x, /img/top_sellers/choco-one-tablet@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco-one-tablet@1x.webp 1x, /img/top_sellers/choco-one-tablet@2x.webp 2x">
                     <!-- Mobile -->
                     <source media="(max-width: 767px)"
-                        srcset="/img/top_sellers/choco-one-mobile@1x.jpg 1x, /img/top_sellers/choco-one-mobile@2x.jpg 2x">
-                    <img class="top-icon" src="../img/top_sellers/choco-one-mobile@1x.jpg"
+                        srcset="/img/top_sellers/choco-one-mobile@1x.webp 1x, /img/top_sellers/choco-one-mobile@2x.webp 2x">
+                    <img class="top-icon" src="../img/top_sellers/choco-one-mobile@1x.webp"
                         alt="Dark chocolate with hazelnuts">
                 </picture>
                 <p class="top-paragraph">Crazy enough chocolate originates from a bean just like the coffee bean called
@@ -24,21 +24,22 @@
                 <picture>
                     <!-- Desktop -->
                     <source media="(min-width: 1200px)"
-                        srcset="/img/top_sellers/choco_two@1x.jpg 1x, /img/top_sellers/choco_two@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco_two@1x.webp 1x, /img/top_sellers/choco_two@2x.webp 2x">
                     <!-- Tablet -->
                     <source media="(min-width: 768px)"
-                        srcset="/img/top_sellers/choco-two-tablet@1x.jpg 1x, /img/top_sellers/choco-two-tablet@2x.jpg 2x">
+                        srcset="/img/top_sellers/choco-two-tablet@1x.webp 1x, /img/top_sellers/choco-two-tablet@2x.webp 2x">
                     <!-- Mobile -->
                     <source media="(max-width: 767px)"
-                        srcset="/img/top_sellers/choco-two-mobile@1x.jpg 1x, /img/top_sellers/choco-two-mobile@2x.jpg 2x">
-                    <img class="top-icon" src="/img/top_sellers/choco-two-mobile@1x.jpg" alt="Milk chocolate with nuts">
+                        srcset="/img/top_sellers/choco-two-mobile@1x.webp 1x, /img/top_sellers/choco-two-mobile@2x.webp 2x">
+                    <img class="top-icon" src="/img/top_sellers/choco-two-mobile@1x.webp"
+                        alt="Milk chocolate with nuts">
                 </picture>
             </li>
             <li class="top-item top-card">
                 <!-- Desktop -->
                 <img class="top-icon"
-                    srcset="/img/top_sellers/choco_three@1x.jpg 1x, /img/top_sellers/choco_three@2x.jpg 2x"
-                    src="/img/top_sellers/choco_three@1x.jpg" alt="Chocolate tower">
+                    srcset="/img/top_sellers/choco_three@1x.webp 1x, /img/top_sellers/choco_three@2x.webp 2x"
+                    src="/img/top_sellers/choco_three@1x.webp" alt="Chocolate tower">
             </li>
         </ul>
         <p class="top-paragraph-desk">Crazy enough chocolate originates from a bean just like the coffee bean called
